Fixing overflow

--- a/meu_projeto/static/styles.css
+++ b/meu_projeto/static/styles.css
@@ -123,7 +123,6 @@
     grid-template-columns: repeat(1, 1fr) !important;
     gap: 20px;
     margin-left: -3vh !important;
-
   }
 
   #video-frame {
@@ -171,6 +170,7 @@
   grid-template-columns: repeat(3, 1fr);
   gap: 2vh;
   margin-left: 5vh;
+  overflow: hidden;
 }
 
 .episode-grid-related {
@@ -962,5 +962,4 @@ h1 {
   padding-top: 1.5vh;
   padding-left: 1.5vh;
   font-size: 2vh;
-  border-radius: 2vh;
 }
